# python_task_demo-python-task_calculator-public

./: .gitignore  .pre-commit-config.yaml  INSTRUCTIONS.md  README.md  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/scripts/: ci_report.py
.github/workflows/: tests.yml
tests/: test_calc.py
